# qt5-action-editor

./: ActionsDialog.cpp  ActionsDialog.h  ActionsDialog.ui  ApplicationWindow.cpp  ApplicationWindow.h  ApplicationWindow.ui  CMakeLists.txt  README.md  main.cpp
